syntax = "proto3";
package exposer;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/cosmology-tech/starship/exposer/exposer";

message GenesisState {
  google.protobuf.Timestamp genesis_time = 1 [ json_name = "genesis_time" ];
  string chain_id = 2 [ json_name = "chain_id" ];
  string initial_height = 3 [ json_name = "initial_height" ];
  google.protobuf.Struct consensus_params = 4 [ json_name = "consensus_params" ];
  string app_hash = 5 [ json_name = "app_hash" ];
  google.protobuf.Struct app_state = 6 [ json_name = "app_state" ];
}
